Fixed naming rule

--- a/AppService.Acmebot/static/add-certificate.html
+++ b/AppService.Acmebot/static/add-certificate.html
@@ -216,12 +216,12 @@
           this.sending = true;
 
           const postData = {
-            ResourceGroupName: this.resourceGroupName,
+            resourceGroupName: this.resourceGroupName,
             appName: this.appName,
-            SlotName: this.slotName,
-            DnsNames: this.dnsNames,
-            UseIpBasedSsl: this.useIpBasedSsl,
-            ForceDns01Challenge: this.forceDns01Challenge
+            slotName: this.slotName,
+            dnsNames: this.dnsNames,
+            useIpBasedSsl: this.useIpBasedSsl,
+            forceDns01Challenge: this.forceDns01Challenge
           };
 
           try {
