Refactoring function implementation (#254)
* Refactoring function implementation

* Fixed api implementation

* Fixed naming rule

--- a/AppService.Acmebot/static/add-certificate.html
+++ b/AppService.Acmebot/static/add-certificate.html
@@ -179,7 +179,7 @@
           this.sitesLoading = true;
 
           try {
-            const response = await axios.get("/api/get-sites/" + newValue);
+            const response = await axios.get("/api/sites/" + newValue);
 
             this.$set(this, "sites", response.data);
           } catch (error) {
@@ -194,7 +194,7 @@
           this.resourceGroupsLoading = true;
 
           try {
-            const response = await axios.get("/api/get-resource-groups");
+            const response = await axios.get("/api/resource-groups");
 
             this.$set(this, "resourceGroups", response.data);
           } catch (error) {
@@ -216,16 +216,16 @@
           this.sending = true;
 
           const postData = {
-            ResourceGroupName: this.resourceGroupName,
+            resourceGroupName: this.resourceGroupName,
             appName: this.appName,
-            SlotName: this.slotName,
-            DnsNames: this.dnsNames,
-            UseIpBasedSsl: this.useIpBasedSsl,
-            ForceDns01Challenge: this.forceDns01Challenge
+            slotName: this.slotName,
+            dnsNames: this.dnsNames,
+            useIpBasedSsl: this.useIpBasedSsl,
+            forceDns01Challenge: this.forceDns01Challenge
           };
 
           try {
-            let response = await axios.post("/api/add-certificate", postData);
+            let response = await axios.post("/api/certificate", postData);
 
             while (true) {
               await delay(5000);
