Fixed Web UI label layout

--- a/AppService.Acmebot/static/add-certificate.html
+++ b/AppService.Acmebot/static/add-certificate.html
@@ -15,7 +15,7 @@
       </h1>
       <div id="app">
         <div class="field is-horizontal">
-          <div class="field-label">
+          <div class="field-label is-normal">
             <label class="label">Resource Group</label>
           </div>
           <div class="field-body">
@@ -32,7 +32,7 @@
           </div>
         </div>
         <div class="field is-horizontal">
-          <div class="field-label">
+          <div class="field-label is-normal">
             <label class="label">App Name</label>
           </div>
           <div class="field-body">
@@ -49,7 +49,7 @@
           </div>
         </div>
         <div class="field is-horizontal">
-          <div class="field-label">
+          <div class="field-label is-normal">
             <label class="label">Deployment Slot</label>
           </div>
           <div class="field-body">
@@ -66,7 +66,7 @@
           </div>
         </div>
         <div class="field is-horizontal">
-          <div class="field-label">
+          <div class="field-label is-normal">
             <label class="label">DNS Names</label>
           </div>
           <div class="field-body">
