--- a/AppService.Acmebot/static/add-certificate.html
+++ b/AppService.Acmebot/static/add-certificate.html
@@ -184,7 +184,7 @@
 
             this.sites = response.data;
           } catch (error) {
-            alert(error);
+            alert(error.response.data.output);
           }
 
           this.sitesLoading = false;
@@ -199,7 +199,7 @@
 
             this.resourceGroups = response.data;
           } catch (error) {
-            alert(error);
+            alert(error.response.data.output);
           }
 
           this.resourceGroupsLoading = false;
