--- a/AppService.Acmebot/wwwroot/add-certificate/index.html
+++ b/AppService.Acmebot/wwwroot/add-certificate/index.html
@@ -38,10 +38,10 @@
           <div class="field-body">
             <div class="field">
               <div class="control">
-                <div class="select" :class="{ 'is-loading': sitesLoading }">
+                <div class="select" :class="{ 'is-loading': webSitesLoading }">
                   <select v-model="webSiteName">
                     <option disabled value="">Please select one</option>
-                    <option v-for="site in sites" :value="site.name">{{ site.name }}</option>
+                    <option v-for="webSite in webSites" :value="webSite.name">{{ webSite.name }}</option>
                   </select>
                 </div>
               </div>
@@ -55,10 +55,10 @@
           <div class="field-body">
             <div class="field">
               <div class="control">
-                <div class="select" :class="{ 'is-loading': slotsLoading }">
+                <div class="select" :class="{ 'is-loading': webSiteSlotsLoading }">
                   <select v-model="slotName">
                     <option disabled value="">Please select one</option>
-                    <option v-for="webSite in slots">{{ webSite.slotName }}</option>
+                    <option v-for="webSiteSlot in webSiteSlots">{{ webSiteSlot.slotName }}</option>
                   </select>
                 </div>
               </div>
@@ -143,8 +143,8 @@
       data() {
         return {
           resourceGroups: [],
-          sites: [],
-          slots: [],
+          webSites: [],
+          webSiteSlots: [],
           resourceGroupName: '',
           webSiteName: '',
           slotName: '',
@@ -152,18 +152,18 @@
           useIpBasedSsl: false,
           forceDns01Challenge: false,
           resourceGroupsLoading: false,
-          sitesLoading: false,
-          slotsLoading: false,
+          webSitesLoading: false,
+          webSiteSlotsLoading: false,
           sending: false
         };
       },
       computed: {
         selectedSlot() {
-          if (!this.slots) {
+          if (!this.webSiteSlots) {
             return undefined;
           }
           const name = this.slotName;
-          return this.slots.find(function (x) { return x.slotName === name; });
+          return this.webSiteSlots.find(function (x) { return x.slotName === name; });
         }
       },
       watch: {
@@ -172,34 +172,34 @@
             return;
           }
 
-          this.sitesLoading = true;
+          this.webSitesLoading = true;
 
           try {
             const response = await axios.get(`/api/group/${newValue}/site`);
 
-            this.sites = response.data;
+            this.webSites = response.data;
           } catch (error) {
             alert(error.response.data.output);
           }
 
-          this.sitesLoading = false;
+          this.webSitesLoading = false;
         },
         async webSiteName(newValue, _) {
           if (!newValue) {
             return;
           }
 
-          this.slotsLoading = true;
+          this.webSiteSlotsLoading = true;
 
           try {
             const response = await axios.get(`/api/group/${this.resourceGroupName}/site/${newValue}/slot`);
 
-            this.slots = response.data;
+            this.webSiteSlots = response.data;
           } catch (error) {
             alert(error.response.data.output);
           }
 
-          this.slotsLoading = false;
+          this.webSiteSlotsLoading = false;
         }
       },
       methods: {
@@ -217,8 +217,8 @@
           this.resourceGroupsLoading = false;
         },
         reset() {
-          this.sites = [];
-          this.slots = [];
+          this.webSites = [];
+          this.webSiteSlots = [];
           this.resourceGroupName = '';
           this.webSiteName = '';
           this.slotName = '';
